# Books

./: .deepsource.toml  .gitignore  Books.code-workspace  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish.yml  release.yml  test.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: TestSentry.vue
