[package]
name = "books"
version = "0.0.2"
description = "another note taking app but with books"
authors = ["mavgrik"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sentry = { git = "https://github.com/enri90/plugins-workspace", branch = "pr_sentry_plugin" }
dotenvy_macro = "0.15.7"
