[package]
name = "books"
version = "0.0.5"
description = "another note taking app but with books"
authors = ["mavgrik"]
edition = "2021"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.25", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sentry = { git = "https://github.com/enri90/plugins-workspace", branch = "pr_sentry_plugin" }
dotenvy_macro = "0.15.7"
tauri-plugin-process = "2.0.0-beta.9"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-beta.12"
